@@ -1,17 +1,17 @@
 Package: diagmeta
 Title: Meta-Analysis of Diagnostic Accuracy Studies with Several Cutpoints
-Version: 0.2-1
+Version: 0.3-0
 Depends: meta (>= 4.9-0)
 Imports: lme4, grDevices
-Authors@R: c(person("Gerta","Rücker", role="aut"),
+Authors@R: c(person("Gerta","R<U+00FC>cker", role="aut"),
     person("Susanne","Steinhauser", role="aut"),
     person("Srinath","Kolampally", role="aut"),
     person("Guido","Schwarzer", email="sc@imbi.uni-freiburg.de", role=c("aut","cre")))
-Author: Gerta Rücker [aut], Susanne Steinhauser [aut], Srinath Kolampally [aut], Guido Schwarzer [aut, cre]
+Author: Gerta R<U+00FC>cker [aut], Susanne Steinhauser [aut], Srinath Kolampally [aut], Guido Schwarzer [aut, cre]
 Maintainer: Guido Schwarzer <sc@imbi.uni-freiburg.de>
-Date: 2018-04-09
+Date: 2018-09-14
 URL: https://github.com/guido-s/diagmeta
 Description: Provides methods by Steinhauser et al. (2016) <DOI:10.1186/s12874-016-0196-1> for meta-analysis of diagnostic accuracy studies with several cutpoints.
 License: GPL (>= 2)
 Encoding: UTF-8
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
