@@ -21,10 +21,11 @@
 #' Youden index. For \code{which="ROC"}, study-specific ROC curves are
 #' shown. For \code{which="SROC"}, the model-based summary ROC curve
 #' is shown. For \code{which="density"}, the model-based densities of
-#' both groups are shown.  Instead of character strings, a numeric
-#' value or vector can be used to specify plots with numbers
-#' corresponding to the following order of plots: "regression", "cdf",
-#' "survival", "youden", "roc", "sroc", and "density".
+#' both groups are shown. For \code{which="sensspec"}, the ??? are
+#' shown. Instead of character strings, a numeric value or vector can
+#' be used to specify plots with numbers corresponding to the
+#' following order of plots: "regression", "cdf", "survival",
+#' "youden", "roc", "sroc", "density", and "sensspec".
 #' 
 #' Other arguments refer to further plot parameters, such as
 #' \code{lines} (whether points belonging to the same study should be
@@ -46,8 +47,8 @@
 #' @param xlab An x axis label
 #' @param main A logical indicating title to the plot
 #' @param ci A logical indicating whether confidence intervals should
-#'   be plotted for \code{"reg"}, \code{"cdf"}, \code{"survival"} and
-#'   \code{"Youden"}
+#'   be plotted for \code{"reg"}, \code{"cdf"}, \code{"survival"},
+#'   \code{"Youden"}, and \code{"sensspec"}
 #' @param ciSens A logical indicating whether confidence intervals
 #'   should be plotted for sensitivity, given the specificity in
 #'   \code{"SROC"} plot
@@ -62,11 +63,11 @@
 #'   on \code{"ROC"} plot
 #' @param lines A logical indicating whether polygonal lines
 #'   connecting points belonging to the same study should be printed
-#'   in plots \code{"reg"}, \code{"cdf"}, \code{"survival"} and
-#'   \code{"Youden"}
+#'   in plots \code{"reg"}, \code{"cdf"}, \code{"survival"},
+#'   \code{"Youden"}, and \code{"sensspec"}
 #' @param rlines A logical indicating whether regression lines or
 #'   curves should be plotted for plots \code{"reg"}, \code{"cdf"},
-#'   \code{"survival"} and \code{"Youden"}
+#'   \code{"survival"}, \code{"Youden"}, and \code{"sensspec"}
 #' @param line.optcut A logical indicating whether a vertical line
 #'   should be plotted at the optimal cutoff line for plots
 #'   \code{"cdf"}, \code{"survival"}, \code{"Youden"}, and
@@ -195,19 +196,20 @@ plot.diagmeta <- function(x,
   if (is.character(which))
     which <- setchar(which, plot.types)
   else if (is.numeric(which)) {
-    if (any(which < 1) | any(which > 7))
-      stop("Numeric values of argument 'which' must be in 1:7")
+    if (any(which < 1) | any(which > 8))
+      stop("Numeric values of argument 'which' must be in 1:8")
     which <- plot.types[which]
   }
   else
     stop("Argument 'which' must be a character vector or ",
-         "a numeric vector with values between 1 and 7.")
+         "a numeric vector with values between 1 and 8.")
   ##
   which <- unique(which)
   ##
   mains <- c("Regression lines", "Cumulative density functions",
              "Survival curves", "Youden index", "ROC curves",
-             "SROC curve", "Density functions")[match(which, plot.types)]
+             "SROC curve", "Density functions",
+             "Sensitivity and Specificity")[match(which, plot.types)]
   ##
   if (!missing(main))
     if (is.logical(main)) {
@@ -1078,6 +1080,168 @@ plot.diagmeta <- function(x,
       abline(v = optcut)
   }
   
+  
+  ##
+  ##
+  ## Sensitivity and specificity
+  ##
+  ##
+  if ("sensspec" %in% which) {
+    ##
+    plot(c(cutoff, cutoff), c(Spec, Sens),
+         type = "n",
+         las = 1, log = log.axis,
+         ylab = "Sensitivity / Specificity", xlab = xlab,
+         main = mains[match("sensspec", which)],
+         xlim = xlim, ylim = c(0, 1), ...)
+    ##
+    ## Add lines
+    ##    
+    if (lines) {
+      for (s in studlab) {
+        lines(cutoff[studlab == s], Spec[studlab == s],
+              col = col.points[studlab == s], lwd = lwd,
+              lty = 2)
+        lines(cutoff[studlab == s], Sens[studlab == s],
+              col = col.points[studlab == s], lwd = lwd,
+              lty = 1)
+      }
+    }
+    ##
+    ## Add data
+    ##
+    points(cutoff, Sens, pch = pch.points, cex = cex,
+           col = col.points)
+    points(cutoff, Spec, pch = 1, cex = cex, col = col.points)
+    ##
+    ## Add curves
+    ##
+    if (log.cutoff) {
+      ##
+      if (rlines) {
+        curve(calcSpec(ciRegr(log(x),
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$TE,
+                       distr),
+              lty = 2, col = 1, lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(log(x),
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$TE,
+                       distr),
+              lty = 1, col = 1, lwd = lwd, add = TRUE)
+      }
+      ##
+      if (ci) {
+        curve(calcSpec(ciRegr(log(x),
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$lower,
+                       distr),
+              lty = 2, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSpec(ciRegr(log(x),
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$upper,
+                       distr),
+              lty = 2, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(log(x),
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$lower,
+                       distr),
+              lty = 1, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(log(x),
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$upper,
+                       distr),
+              lty = 1, col = "gray", lwd = lwd, add = TRUE)
+      }
+    }
+    else {
+      ##
+      if (rlines) {
+        curve(calcSpec(ciRegr(x,
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$TE,
+                       distr),
+              lty = 2, col = 1, lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(x,
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$TE,
+                       distr),
+              lty = 1, col = 1, lwd = lwd, add = TRUE)
+      }
+      ##
+      if (ci) {
+        curve(calcSpec(ciRegr(x,
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$lower,
+                       distr),
+              lty = 2, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSpec(ciRegr(x,
+                              alpha0, var.alpha0,
+                              beta0, var.beta0,
+                              cov.alpha0.beta0,
+                              var.nondiseased,
+                              level)$upper,
+                       distr),
+              lty = 2, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(x,
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$lower,
+                       distr),
+              lty = 1, col = "gray", lwd = lwd, add = TRUE)
+        ##
+        curve(calcSens(ciRegr(x,
+                              alpha1, var.alpha1,
+                              beta1, var.beta1,
+                              cov.alpha1.beta1,
+                              var.diseased,
+                              level)$upper,
+                       distr),
+              lty = 1, col = "gray", lwd = lwd, add = TRUE)
+      }
+    }
+    ##
+    ## Draw line for optimal cutoff
+    ##
+    if (line.optcut) 
+      abline(v = optcut)
+  }  
   
   invisible(NULL)
 }
